# CodeCoach-cpp

./: README.md
CodeCoachBackend/: CMakeLists.txt
CodeCoachBackend/analizador_soluciones/: analizador.cpp
CodeCoachBackend/motor_evaluacion/: motor.cpp
